<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InternationalLog.InternationalLogin"
    android:background="@drawable/bkg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!--<ImageView
            android:id="@+id/login_back_button"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:src="@drawable/back_button" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_menu"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:fontFamily="sans-serif-black"
            android:textAllCaps="true"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="30dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#6095FD"
                android:layout_marginTop="10dp">
            </RelativeLayout>

            <ImageView
                android:src="@drawable/admini1"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="10dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:orientation="vertical"
            android:layout_marginTop="70dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="323.5dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_username"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:startIconDrawable="@drawable/user_name_icon"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:layout_marginLeft="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/black"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:layout_marginRight="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remember_me"
                    android:buttonTint="@color/black"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:background="#00000000"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:layout_marginRight="40dp"/>
            </RelativeLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="250dp"
                android:layout_marginRight="10dp"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/blue"
                android:text="@string/login_menu2"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                app:cornerRadius = "20dp"
                tools:ignore="VisualLintButtonSize" />


           <!-- <TextView
                android:id="@+id/signUp_redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp_not"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/black"/>-->



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>