<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InternationalLog.InternationalSignUp"
    android:background="@drawable/signupbak">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="25dp"
                android:hint="@string/sign_upName"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/user_name_icon"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_Name"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="323.5dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:hint="@string/enter_username"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/user_name_icon"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="323.5dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:hint="@string/enter_user_email"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/email_icon1"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="25dp"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_Password"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signUp_button"
                android:layout_width="250dp"
                android:layout_marginRight="20dp"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/newBg"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:textColor="#E1BEE7"
                android:layout_gravity="center"
                app:cornerRadius = "20dp"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/login_redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp_already"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/black">

            </TextView>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>