<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.LoginActivity"
    android:background="@drawable/bkg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-black"
            android:text="Admission Department Login"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#6095FD"
                android:layout_marginTop="10dp">
            </RelativeLayout>
            <ImageView
                android:src="@drawable/admini1"
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="10dp"
                />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="323.5dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:hint="@string/enter_username"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/user_name_icon"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_emailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="25dp"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:buttonTint="@color/black"
                    android:text="@string/remember_me"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="40dp"
                    android:background="#00000000"
                    android:textColor="@color/black"
                    android:text="@string/forget_password" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/blue"
                android:text="@string/login_menu2"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>